src/test/ui/variance/variance-btree-invariant-types.stderr
error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:4:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::IterMut<'_, &'new (), _>`
              found type `std::collections::btree_map::IterMut<'_, &'static (), _>`
note: the lifetime 'new as defined on the function body at 3:21...
  --> $DIR/variance-btree-invariant-types.rs:3:21
   |
LL | fn iter_cov_key<'a, 'new>(v: IterMut<'a, &'static (), ()>) -> IterMut<'a, &'new (), ()> {
   |                     ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:7:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::IterMut<'_, _, &'new ()>`
              found type `std::collections::btree_map::IterMut<'_, _, &'static ()>`
note: the lifetime 'new as defined on the function body at 6:21...
  --> $DIR/variance-btree-invariant-types.rs:6:21
   |
LL | fn iter_cov_val<'a, 'new>(v: IterMut<'a, (), &'static ()>) -> IterMut<'a, (), &'new ()> {
   |                     ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:10:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::IterMut<'_, &'static (), _>`
              found type `std::collections::btree_map::IterMut<'_, &'new (), _>`
note: the lifetime 'new as defined on the function body at 9:24...
  --> $DIR/variance-btree-invariant-types.rs:9:24
   |
LL | fn iter_contra_key<'a, 'new>(v: IterMut<'a, &'new (), ()>) -> IterMut<'a, &'static (), ()> {
   |                        ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:13:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::IterMut<'_, _, &'static ()>`
              found type `std::collections::btree_map::IterMut<'_, _, &'new ()>`
note: the lifetime 'new as defined on the function body at 12:24...
  --> $DIR/variance-btree-invariant-types.rs:12:24
   |
LL | fn iter_contra_val<'a, 'new>(v: IterMut<'a, (), &'new ()>) -> IterMut<'a, (), &'static ()> {
   |                        ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:18:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::OccupiedEntry<'_, &'new (), _>`
              found type `std::collections::btree_map::OccupiedEntry<'_, &'static (), _>`
note: the lifetime 'new as defined on the function body at 16:20...
  --> $DIR/variance-btree-invariant-types.rs:16:20
   |
LL | fn occ_cov_key<'a, 'new>(v: OccupiedEntry<'a, &'static (), ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:22:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::OccupiedEntry<'_, _, &'new ()>`
              found type `std::collections::btree_map::OccupiedEntry<'_, _, &'static ()>`
note: the lifetime 'new as defined on the function body at 20:20...
  --> $DIR/variance-btree-invariant-types.rs:20:20
   |
LL | fn occ_cov_val<'a, 'new>(v: OccupiedEntry<'a, (), &'static ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:26:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::OccupiedEntry<'_, &'static (), _>`
              found type `std::collections::btree_map::OccupiedEntry<'_, &'new (), _>`
note: the lifetime 'new as defined on the function body at 24:23...
  --> $DIR/variance-btree-invariant-types.rs:24:23
   |
LL | fn occ_contra_key<'a, 'new>(v: OccupiedEntry<'a, &'new (), ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:30:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::OccupiedEntry<'_, _, &'static ()>`
              found type `std::collections::btree_map::OccupiedEntry<'_, _, &'new ()>`
note: the lifetime 'new as defined on the function body at 28:23...
  --> $DIR/variance-btree-invariant-types.rs:28:23
   |
LL | fn occ_contra_val<'a, 'new>(v: OccupiedEntry<'a, (), &'new ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:35:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::VacantEntry<'_, &'new (), _>`
              found type `std::collections::btree_map::VacantEntry<'_, &'static (), _>`
note: the lifetime 'new as defined on the function body at 33:20...
  --> $DIR/variance-btree-invariant-types.rs:33:20
   |
LL | fn vac_cov_key<'a, 'new>(v: VacantEntry<'a, &'static (), ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:39:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::VacantEntry<'_, _, &'new ()>`
              found type `std::collections::btree_map::VacantEntry<'_, _, &'static ()>`
note: the lifetime 'new as defined on the function body at 37:20...
  --> $DIR/variance-btree-invariant-types.rs:37:20
   |
LL | fn vac_cov_val<'a, 'new>(v: VacantEntry<'a, (), &'static ()>)
   |                    ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:43:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::VacantEntry<'_, &'static (), _>`
              found type `std::collections::btree_map::VacantEntry<'_, &'new (), _>`
note: the lifetime 'new as defined on the function body at 41:23...
  --> $DIR/variance-btree-invariant-types.rs:41:23
   |
LL | fn vac_contra_key<'a, 'new>(v: VacantEntry<'a, &'new (), ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error[E0308]: mismatched types
  --> $DIR/variance-btree-invariant-types.rs:47:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected type `std::collections::btree_map::VacantEntry<'_, _, &'static ()>`
              found type `std::collections::btree_map::VacantEntry<'_, _, &'new ()>`
note: the lifetime 'new as defined on the function body at 45:23...
  --> $DIR/variance-btree-invariant-types.rs:45:23
   |
LL | fn vac_contra_val<'a, 'new>(v: VacantEntry<'a, (), &'new ()>)
   |                       ^^^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0308`.
